# surfa-mcp

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml  test_dogfooding.py  test_http_mode.sh
src/surfa_mcp/: __init__.py  analytics.py  server.py
src/surfa_mcp/api/: __init__.py  client.py
src/surfa_mcp/config/: settings.py
src/surfa_mcp/tools/: __init__.py  find_highest_latency.py  get_analytics.py  get_session.py  query_events.py
tests/: test_tools.py
